--- a/gradle.properties
+++ b/gradle.properties
@@ -21,7 +21,7 @@ default_release_type=stable
 # Modrinth Metadata
 modrinth_slug=modmenu
 modrinth_id=mOgUt4GM
-modrinth_game_versions=25w07a, 25w08a, 25w09a, 25w09b, 25w10a
+modrinth_game_versions=25w09a, 25w09b, 25w10a
 modrinth_mod_loaders=fabric, quilt
 modrinth_required_dependencies=fabric-api, placeholder-api
 
