--- a/.github/workflows/check_build.yml
+++ b/.github/workflows/check_build.yml
@@ -11,22 +11,22 @@ jobs:
     strategy:
       matrix:
         # Use these Java versions
-        java: [
-          21,  # Minimum
-        ]
-        os: [ubuntu-22.04]
+        java: [ 21 ]
+        distro: [ temurin ]
+        # and run on both Linux and Windows
+        os: [ ubuntu-latest ]
     runs-on: ${{ matrix.os }}
     steps:
       - name: Checkout repository
-        uses: actions/checkout@v3
+        uses: actions/checkout@v4
         with:
           fetch-depth: 0
       - name: Validate Gradle wrapper
         uses: gradle/wrapper-validation-action@v1
       - name: Setup JDK ${{ matrix.java }}
-        uses: actions/setup-java@v3
+        uses: actions/setup-java@v4
         with:
-          distribution: zulu
+          distribution: ${{ matrix.distro }}
           java-version: ${{ matrix.java }}
       - name: Make Gradle wrapper executable
         if: ${{ runner.os != 'Windows' }}
@@ -34,7 +34,7 @@ jobs:
       - name: Build
         run: ./gradlew build --stacktrace --parallel
       - name: Capture build artifacts
-        if: ${{ runner.os == 'Linux' && matrix.java == '17' }} # Only upload artifacts built from LTS java on one OS
+        if: ${{ runner.os == 'Linux' && matrix.java == '21' }} # Only upload artifacts built from LTS java on one OS
         uses: actions/upload-artifact@v4
         with:
           name: Artifacts
