fix description list Background-gradient widget / scroll bar. (#864)

--- a/build.gradle
+++ b/build.gradle
@@ -37,3 +37,7 @@ repositories {
 		url = 'https://maven.nucleoid.xyz/'
 	}
 }
+
+loom {
+	accessWidenerPath = file("src/main/resources/modmenu.accesswidener")
+}
