--- a/gradle.properties
+++ b/gradle.properties
@@ -4,8 +4,8 @@ org.gradle.parallel=true
 maven_group=com.terraformersmc
 archive_name=modmenu
 
-minecraft_version=1.21.6-rc1
-yarn_mappings=1.21.6-rc1+build.1
+minecraft_version=1.21.6
+yarn_mappings=1.21.6+build.1
 loader_version=0.16.14
 fabric_version=0.127.0+1.21.6
 text_placeholder_api_version=2.7.0+1.21.6
@@ -22,7 +22,7 @@ default_release_type=stable
 # Modrinth Metadata
 modrinth_slug=modmenu
 modrinth_id=mOgUt4GM
-modrinth_game_versions=1.21.6-rc1
+modrinth_game_versions=1.21.6
 modrinth_mod_loaders=fabric, quilt
 modrinth_required_dependencies=fabric-api, placeholder-api
 
