--- a/gradle.properties
+++ b/gradle.properties
@@ -29,7 +29,7 @@ modrinth_required_dependencies=fabric-api, placeholder-api
 # CurseForge Metadata
 curseforge_slug=modmenu
 curseforge_id=308702
-curseforge_game_versions=1.21.6-snapshot, Fabric, Quilt
+curseforge_game_versions=1.21.6, Fabric, Quilt
 curseforge_required_dependencies=fabric-api, text-placeholder-api
 curseforge_optional_dependencies=
 
