--- a/gradle.properties
+++ b/gradle.properties
@@ -22,7 +22,7 @@ default_release_type=stable
 # Modrinth Metadata
 modrinth_slug=modmenu
 modrinth_id=mOgUt4GM
-modrinth_game_versions=1.21.9
+modrinth_game_versions=1.21.9, 1.21.10-rc1
 modrinth_mod_loaders=fabric, quilt
 modrinth_required_dependencies=fabric-api, placeholder-api
 
