--- a/gradle.properties
+++ b/gradle.properties
@@ -4,10 +4,10 @@ org.gradle.parallel=true
 maven_group=com.terraformersmc
 archive_name=modmenu
 
-minecraft_version=1.21.9
-yarn_mappings=1.21.9+build.1
-loader_version=0.17.2
-fabric_version=0.133.14+1.21.9
+minecraft_version=25w45a
+yarn_mappings=25w45a+build.1
+loader_version=0.18.0
+fabric_version=0.138.2+1.21.11
 text_placeholder_api_version=2.8.0+1.21.9
 quilt_loader_version=0.29.0-beta.3
 
