--- a/gradle.properties
+++ b/gradle.properties
@@ -4,10 +4,10 @@ org.gradle.parallel=true
 maven_group=com.terraformersmc
 archive_name=modmenu
 
-minecraft_version=25w46a
-yarn_mappings=25w46a+build.2
-loader_version=0.17.3
-fabric_version=0.138.4+1.21.11
+minecraft_version=1.21.11
+yarn_mappings=1.21.11+build.3
+loader_version=0.18.3
+fabric_version=0.140.0+1.21.11
 text_placeholder_api_version=2.8.1+1.21.10
 quilt_loader_version=0.29.0-beta.3
 
@@ -22,14 +22,14 @@ default_release_type=stable
 # Modrinth Metadata
 modrinth_slug=modmenu
 modrinth_id=mOgUt4GM
-modrinth_game_versions=25w46a
+modrinth_game_versions=1.21.11
 modrinth_mod_loaders=fabric, quilt
 modrinth_required_dependencies=fabric-api, placeholder-api
 
 # CurseForge Metadata
 curseforge_slug=modmenu
 curseforge_id=308702
-curseforge_game_versions=1.21.11-snapshot, Fabric, Quilt
+curseforge_game_versions=1.21.11, Fabric, Quilt
 curseforge_required_dependencies=fabric-api, text-placeholder-api
 curseforge_optional_dependencies=
 
