--- a/build.gradle
+++ b/build.gradle
@@ -1,22 +1,21 @@
 plugins {
-	id 'fabric-loom' version '1.13-SNAPSHOT'
+	id 'net.fabricmc.fabric-loom' version '1.14-SNAPSHOT'
 }
 
-apply from: 'https://raw.githubusercontent.com/TerraformersMC/GradleScripts/2.7/ferry.gradle'
+apply from: 'https://raw.githubusercontent.com/TerraformersMC/GradleScripts/3.1/ferry.gradle'
 
 dependencies {
 	minecraft "com.mojang:minecraft:$project.minecraft_version"
-	mappings "net.fabricmc:yarn:$project.yarn_mappings:v2"
 
-	mod "fabric-loader", "net.fabricmc:fabric-loader:$project.loader_version"
+    implementation "net.fabricmc:fabric-loader:$project.loader_version"
 
-	includeMod "fabric-api", fabricApi.module("fabric-api-base", project.fabric_version)
-	includeMod "fabric-api", fabricApi.module("fabric-resource-loader-v1", project.fabric_version)
-	includeMod "fabric-api", fabricApi.module("fabric-screen-api-v1", project.fabric_version)
-	includeMod "fabric-api", fabricApi.module("fabric-key-binding-api-v1", project.fabric_version)
-	includeMod "fabric-api", fabricApi.module("fabric-lifecycle-events-v1", project.fabric_version)
+	implementation include(fabricApi.module("fabric-api-base", project.fabric_version))
+    implementation include(fabricApi.module("fabric-resource-loader-v1", project.fabric_version))
+    implementation include(fabricApi.module("fabric-screen-api-v1", project.fabric_version))
+    implementation include(fabricApi.module("fabric-key-binding-api-v1", project.fabric_version))
+    implementation include(fabricApi.module("fabric-lifecycle-events-v1", project.fabric_version))
 
-	includeMod "text-placeholder-api", "eu.pb4:placeholder-api:${project.text_placeholder_api_version}"
+    implementation include("eu.pb4:placeholder-api:${project.text_placeholder_api_version}")
 
 	compileOnly "org.quiltmc:quilt-loader:$project.quilt_loader_version"
 }
