--- a/build.gradle
+++ b/build.gradle
@@ -15,7 +15,8 @@ dependencies {
     implementation include(fabricApi.module("fabric-key-binding-api-v1", project.fabric_version))
     implementation include(fabricApi.module("fabric-lifecycle-events-v1", project.fabric_version))
 
-    implementation include("eu.pb4:placeholder-api:${project.text_placeholder_api_version}")
+//    implementation include("eu.pb4:placeholder-api:${project.text_placeholder_api_version}")
+    compileOnly "eu.pb4:placeholder-api:${project.text_placeholder_api_version}"
 
 	compileOnly "org.quiltmc:quilt-loader:$project.quilt_loader_version"
 }
