Let's see if we can fix that publishing icon...
* Add large version of ModMenu icon
* Adjust publishing icon URL
* Bump Fabric versions

--- a/gradle.properties
+++ b/gradle.properties
@@ -5,15 +5,15 @@ maven_group=com.terraformersmc
 archive_name=modmenu
 
 minecraft_version=26.1-snapshot-1
-loader_version=0.18.3
-fabric_version=0.140.1+26.1
+loader_version=0.18.4
+fabric_version=0.140.2+26.1
 text_placeholder_api_version=2.8.1+1.21.10
 quilt_loader_version=0.29.0-beta.3
 
 # Project Metadata
 project_name=Mod Menu
 project_url=https://modrinth.com/mod/modmenu
-project_logo=https://raw.githubusercontent.com/Prospector/images/master/modmenu-logo.png
+project_logo=https://raw.githubusercontent.com/TerraformersMC/ModMenu/refs/heads/26.1/src/main/resources/assets/modmenu/icon_large.png
 project_color=0x134bff
 # default_release_type can be stable, beta, or alpha
 default_release_type=stable
